* Add API.string_of_message for human consumption of structured errors
* Add API.get_rate to retrieve possibly cached rate-limit information
* Add API.get_rate_limit to retrieve the possibly cached query quota
* Add API.get_rate_remaining to retrieve the possibly cached query quota remaining
* Add API.get_rate_reset to retrieve the possibly cached quota expiry
* Add Repo.fork to create fork of a repository to the present user or given org
* Add Repo.forks to list the forks of a given repository
* Event submodule added with a variety of event sources
* A new jar command, git-list-events, has been added to print events for a repo
* A new test binary, parse_events, has been added which downloads and
  parses archive event data
* Fixed bug in Issue.for_repo preventing listing of issues without
  milestone (#49,#53 Michael Grünewald)
* A new jar command, git-list-issues, has been added to print issues for a repo
* A new jar command, git-search, has been added to search GitHub
* Filter.state now includes `All constructor (#59,#62 Michael Grünewald)
* pull_ref type added from which pull now inherits
* issue_pull_request optional field of pull_ref type added
* Issue.is_issue and Issue.is_pull added to distinguish issues from PRs
* organization type added
* user and organization now inherit from org
* user_info_updated_at field added
* user_info_html_url field added
* issue_created_at, issue_updated_at, issue_closed_at added (#50,#51
  from Michael Grünewald)
* repository_subscribers_count field added (the new "watchers")
* repository_language field added
* repository_has_pages field added
* comment type added
* issue_comment_html_url field added
* commit_comment type added
* commit_comment_event type added
* ref type added
* create_event type added
* delete_event type added
* fork_event type added
* wiki_page_action type added
* wiki_page type added
* gollum_event added
* issue_comment_action type added
* issue_comment_event type added
* issues_action type added